# PureRGB

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-07-20-sidecar-fallback-argb-presets.md  2026-07-21-hardware-telemetry.md  2026-07-21-usb-capture.md  2026-07-22-openrgb-auto-update.md  2026-07-22-usb-hotplug-notification.md  2026-07-22-zone-led-detection-wizard.md
docs/superpowers/specs/: 2026-07-20-auto-conflict-management-design.md  (+10 more)
scripts/: build-sidecars.ps1  fetch-openrgb.ps1
sidecars/sensord/: Program.cs  sensord.csproj
src/: App.vue  style.css  themes.ts  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: conflicts.rs  hotplug.rs  lib.rs  main.rs  netdev.rs  sensors.rs  settings.rs  telemetry.rs  usbcapture.rs
src-tauri/src/backends/: mobo.rs  mod.rs
src-tauri/src/backends/hid/: corsair_node.rs  known.rs  known_remote.rs  mod.rs  nzxt_hue2.rs
src-tauri/src/backends/liquidctl/: mod.rs
src-tauri/src/backends/openrgb/: manager.rs  mod.rs  protocol.rs  updater.rs
src-tauri/src/core/: mod.rs  registry.rs
src-tauri/src/engine/: curves.rs  effects.rs  mod.rs
src/assets/: brands.ts
src/components/: ConflictPanel.vue  DeviceCanvas.vue  DeviceCard.vue  DeviceGrid.vue  DeviceIcon.vue  DeviceList.vue  EffectDrawer.vue  EffectPanel.vue  FanPanel.vue  LcdPanel.vue  SettingsPanel.vue  SmartPanel.vue  ThemePanel.vue
src/data/: fanPresets.ts
(+24 files in other folders)
