[package]
name = "purergb"
version = "0.6.0"
description = "PureRGB — contrôle RGB, ARGB, ventilateurs, AIO et hubs pour Windows 10/11"
authors = ["Heiphaistos"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "purergb_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hidapi = "2.6"
parking_lot = "0.12"
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
sysinfo = "0.39"
tauri-plugin-dialog = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
